--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,4 +1,4 @@
 <% content_for :title do %>
-    <%= @entry.meal_type%> &ndash; 
+    <%= @entry.meal_type%> &ndash; <%=@entry.day%>
 <% end %>
 <%= render @entry %>
